--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,8 +6,8 @@
 
 
       <!-- Flèche nav pour mobile -->
-      <p id="test" >test</p>
-      
+      <p id="test">test</p>
+
       <img class="nav-link active" src="assets/img/LOGO_sans_hallo.png" alt="logo">
       <img class="nav-link" src="assets/img/3.png" alt="tuto app1">
       <img class="nav-link" src="assets/img/photo.png" alt="tuto app2">
@@ -34,38 +34,39 @@
         </div>
         <div *ngIf="data != undefined">
 
-        
-           
+
+
           <!-- <button (click)="checkDataLength(bio)">bio</button> -->
-            <div>
-              <app-readmore [isReadMore]="isReadMore">
-                <h2 id="bio" class="gris Caveat fs-4 mb-0 mx-5 text-uppercase fw-bold">{{bio}}</h2>
-              </app-readmore>
+          <div>
+            <app-readmore [isReadMore]="isReadMore">
+              <h2 id="bio" class="gris Caveat fs-4 mb-0 mx-5 text-uppercase fw-bold">{{bio}}</h2>
+            </app-readmore>
           </div>
-    
+
         </div>
-      
-        
+
+
       </ng-container>
 
-      
-      <!-- POPUP A STYLISER -->
-    <div id="overlay" class="overlay ">
-      
-      <div id="popup" class="popup rounded-3 position-relative overflow-auto" >
 
-        <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
-          class="las la-times-circle gris display-1"></i></span>
+      <!-- POPUP A STYLISER -->
+      <div id="overlay" class="overlay ">
+
+        <div id="popup" class="popup rounded-3 position-relative overflow-auto">
+
+          <span id="btnClose" (click)="closePopup()" class="btnClose position-absolute top-0 end-0 "><i
+              class="las la-times-circle gris display-1"></i></span>
           <!-- <app-carousel>
             <h2>{{bio}}</h2>
-          </app-carousel> -->  
-          <div class="d-flex flex-column flex-md-row " >
+          </app-carousel> -->
+          <div class="d-flex flex-column flex-md-row ">
             <div class="d-flex">
-              <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo" class=" position-absolute top-0 start-0 m-3">
-             
+              <img src="{{data.partner.logo}}" alt="brand_logo" id="home_brand_logo"
+                class=" position-absolute top-0 start-0 m-3">
+
             </div>
             <!---->
-            
+
             <!-- <div class="carousel-inner">
               <div *ngFor="let board of data.boards; let i=index" [ngClass]="(i === 0) ? 'active' : ''">
                   <img src="{{board.images[0]}}" alt="img">
@@ -78,51 +79,56 @@
           </div> -->
 
 
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div id="popup_image1" class="carousel-item active">
-        
-      </div>
-      <div  id="popup_image2" class="carousel-item">
-        <img src="../assets/img/images.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+            <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div id="popup_image1" class="carousel-item active">
+
+                </div>
+                <div id="popup_image2" class="carousel-item">
+
+                </div>
+
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
 
 
             <!---->
-            <div id="popup_image"class="d-flex align-items-center container-fluid justify-content-center"  style="height:70vh;"></div>              
-              <article class="container-fluid d-flex justify-content-center flex-column">
-                
+            <!-- <div id="popup_image" class="d-flex align-items-center container-fluid justify-content-center"
+              style="height:70vh;"></div> -->
+            <article class="container-fluid d-flex justify-content-center flex-column">
+
               <h1 id="popup_brand_model"></h1>
               <h2 id="popup_board_info"></h2>
-              <h2 class="gris fs-2 mb-0 Caveat">je la teste !</h2><p  id="popup_board_price"></p>
-              <p class="text-uppercase d-flex justify-content-center flex-column fs-3  rouge">Disponible a l'essaie à <span class="fw-bold">{{data.partner.city}}</span></p>
+              <h2 class="gris fs-2 mb-0 Caveat">je la teste !</h2>
+              <p id="popup_board_price"></p>
+              <p class="text-uppercase d-flex justify-content-center flex-column fs-3  rouge">Disponible a l'essaie à
+                <span class="fw-bold">{{data.partner.city}}</span></p>
               <div class="d-flex justify-content-center">
-                <button href="#" id="popup_h1" class="mx-5 mb-3 text-center rounded-3 btn Caveat text-uppercase fst-italic text-white fs-3 mt-3 mb-3">Téléchargez l'app pour tester</button>
+                <button href="#" id="popup_h1"
+                  class="mx-5 mb-3 text-center rounded-3 btn Caveat text-uppercase fst-italic text-white fs-3 mt-3 mb-3">Téléchargez
+                  l'app pour tester</button>
 
               </div>
-              </article>
-              
-          </div>
-         
+            </article>
 
-         
-          
+          </div>
+
+
+
+
+        </div>
       </div>
-  </div>
-  <!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../assets/img/3.png" class="d-block w-100" alt="...">
@@ -145,32 +151,38 @@
   </div> -->
 
       <!--BOARD SECTION-->
-      <div  *ngIf="data != undefined" class="container-fluid   d-flex flex-row justify-content-around mt-5" id="home_board_section">
+      <div *ngIf="data != undefined" class="container-fluid   d-flex flex-row justify-content-around mt-5"
+        id="home_board_section">
         <div class="row justify-content-center" id="home_display_boards">
 
-          
 
-          
+
+
           <!--Board dynamique-->
-          <ng-container *ngFor="let board of data.boards;let i = index" >
-           
-            <div id="article-{{i}}" (click)="clickBoards(i)" class="home_card col-4 art_board d-flex flex-column  p-1 mb-3" style="width: 25rem;">
+          <ng-container *ngFor="let board of data.boards;let i = index">
+
+            <div id="article-{{i}}" (click)="clickBoards(i)"
+              class="home_card col-4 art_board d-flex flex-column  p-1 mb-3" style="width: 25rem;">
               <div class="position-relative rounded-3" style="background-color: #f6f6f6;">
 
 
-                
-                
+
+
                 <img src="{{board.images[0]}}" alt="planche" style="height: 35vh; " class="data_image rounded mt-1">
-                <img src="{{board.images[1]}}" alt="planche" style="height: 35vh; " class="data_image2 rounded mt-1 text_hide">
+                <img src="{{board.images[1]}}" alt="planche" style="height: 35vh; "
+                  class="data_image2 rounded mt-1 text_hide">
 
                 <div class="voir_div  position-absolute top-100 start-50 translate-middle">
                   <p class="voir_p fw-bold px-1 fs-5 text-center fst-italic"> Réserver</p>
                 </div>
               </div>
               <div class="border-bottom">
-                <p class="text_hide board_info Caveat orange">{{board.size_ft}}'{{board.size_inch}} X {{board.width_decimal}} ' {{board.width_inch}} X {{board.thickness_decimal}} ' {{board.thickness_inch}}
-                 -{{board.volume}} L</p>
-                <h5 class="board_details_h2 data_brand_model fs-4 fw-bold mt-3 text-uppercase fst-italic">{{board.brand_model}} - {{board.size_ft}}'{{board.size_inch}}</h5>
+                <p class="text_hide board_info Caveat orange">{{board.size_ft}}'{{board.size_inch}} X
+                  {{board.width_decimal}} ' {{board.width_inch}} X {{board.thickness_decimal}} '
+                  {{board.thickness_inch}}
+                  -{{board.volume}} L</p>
+                <h5 class="board_details_h2 data_brand_model fs-4 fw-bold mt-3 text-uppercase fst-italic">
+                  {{board.brand_model}} - {{board.size_ft}}'{{board.size_inch}}</h5>
 
                 <p class="orange Caveat fs-3 fw-bold "><span class="price">{{board.rental_price}}€</span>/H</p>
 
@@ -200,22 +212,22 @@
               </button>
             </div> -->
 
-            <div  *ngFor="let board of data.boards.images">
+            <div *ngFor="let board of data.boards.images">
               <div>
                 <img src="{{board.images}}" alt="planche" style="height: 35vh; " class="data_image rounded mt-1">
               </div>
-              
-          
+
+
             </div>
           </ng-container>
 
-          
-          <input type="text" [(ngModel)]="currentMsgToChild1">
+
+
 
         </div>
-        <div  id="spinner" class="d-flex d-none justify-content-center">
+        <div id="spinner" class="d-flex d-none justify-content-center">
           <div class="spinner-border " role="status">
-            <span  class="visually-hidden ">Loading...</span>
+            <span class="visually-hidden ">Loading...</span>
           </div>
         </div>
       </div>
@@ -240,13 +252,14 @@
 
         <div id="app3" class="d-flex me-5 mt-3 justify-content-around flex-lg-column">
 
-          <a href="https://apps.apple.com/fr/app/sea-locker/id1550954820"><img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
-            class="img-fluid p-2 border mb-3 border-3 rounded-3 bg-dark" alt="apple-logo"></a>
-          <a href="https://play.google.com/store/apps/details?id=com.sealocker&gl=FR"><img src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
-            class="img-fluid  p-2 border mb-3 border-3 rounded-3 bg-dark" alt="google-logo"></a>
+          <a href="https://apps.apple.com/fr/app/sea-locker/id1550954820"><img
+              src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
+              class="img-fluid p-2 border mb-3 border-3 rounded-3 bg-dark" alt="apple-logo"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.sealocker&gl=FR"><img
+              src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
+              class="img-fluid  p-2 border mb-3 border-3 rounded-3 bg-dark" alt="google-logo"></a>
         </div>
       </div>
     </section>
   </footer>
 </body>
-
